@@ -25,10 +25,10 @@ If you use a \code{gwindow} instance as a container and pass in the argument \co
 ggroup:
 
 Need to implement drag motion raise.  The \code{use.scrollwindow}
-option works, but it is not perfect. A height and width need to be
-prespecified when constructed. The defaults are 400 by 400, but these
-can be overridden with similarly named arguments. If the height is too
-small, the whole thing fails ungracefully.
+option works, but it is not perfect. The width and height of the
+ggroup object to be displayed must be set. The defaults are large (500
+by 2500), but may not be large enough for your use. If they aren't,
+then the child widgets get compressed in an odd way.
 
 
 gframe:
